Creating a reusable recycle view adapter and layout, Creating for him fragment

--- a/app/src/main/res/layout/fragment_for_him.xml
+++ b/app/src/main/res/layout/fragment_for_him.xml
@@ -6,7 +6,8 @@
     tools:context=".fragments.ForHimFragment">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/men_recycleView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_centerInParent="true"/>
+        android:layout_centerInParent="true" />
 </RelativeLayout>
