--- a/app/src/main/res/layout/fragment_for_her.xml
+++ b/app/src/main/res/layout/fragment_for_her.xml
@@ -5,8 +5,8 @@
     android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycle"
+        android:id="@+id/women_recycleView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_centerInParent="true"/>
+        android:layout_centerInParent="true" />
 </RelativeLayout>
