--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -2,6 +2,8 @@
 <resources>
     <array name="preloaded_fonts" translatable="false">
         <item>@font/acme</item>
+        <item>@font/aladin</item>
+        <item>@font/allan</item>
         <item>@font/amarante</item>
         <item>@font/montez</item>
     </array>
