--- a/app/src/main/res/drawable/bachground_gradient.xml
+++ b/app/src/main/res/drawable/bachground_gradient.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 <gradient
     android:type="linear"
-    android:startColor="#808080"
-    android:endColor="#efe6d4"
+    android:startColor="#0A1E2E"
+    android:endColor="#73B7CA"
     android:angle="45"/>
 </shape>
