--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -5,6 +5,8 @@
         <item>@font/aladin</item>
         <item>@font/allan</item>
         <item>@font/amarante</item>
+        <item>@font/courier_prime_bold</item>
         <item>@font/montez</item>
+        <item>@font/roboto_slab_bold</item>
     </array>
 </resources>
