--- a/app/src/main/res/drawable/rounded_corners2.xml
+++ b/app/src/main/res/drawable/rounded_corners2.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#FFFFFF" />
+    <solid android:color="@color/black" />
     <!--    android:radius="50dp"-->
     <corners
 
-        android:topLeftRadius="40dp"
-        android:bottomLeftRadius="40dp"
-        android:topRightRadius="40dp"
-        android:bottomRightRadius="40dp"/>
+        android:topLeftRadius="70dp"
+        android:bottomLeftRadius="70dp"
+        android:topRightRadius="70dp"
+        android:bottomRightRadius="70dp"/>
 
 </shape>
