--- a/app/src/main/res/layout/fragment_cat_list.xml
+++ b/app/src/main/res/layout/fragment_cat_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,6 +11,12 @@
         android:layout_height="wrap_content"
         android:scaleType="fitXY"
         android:src="@drawable/background_secondary" />
+
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_baseline_grid_view_24" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -42,5 +49,6 @@
                 tools:listitem="@layout/cat_list_view"></ListView>
 
         </FrameLayout>
+
     </LinearLayout>
 </FrameLayout>
