--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -8,6 +8,12 @@
     tools:context=".fragments.CategoriesFragment">
 
 
+    <ImageButton
+        android:id="@+id/list_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_baseline_list_24" />
+
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="wrap_content"
@@ -16,6 +22,7 @@
         android:src="@drawable/background_secondary" />
 
     <LinearLayout
+        android:id="@+id/grid_button"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
