--- a/app/src/main/res/layout/fragment_cat_list.xml
+++ b/app/src/main/res/layout/fragment_cat_list.xml
@@ -45,6 +45,7 @@
                 android:id="@+id/cat_list_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layoutAnimation="@anim/layout_animation"
                 android:visibility="visible"
                 tools:listitem="@layout/cat_list_view"></ListView>
 
