--- a/app/src/main/res/layout/fragment_for_her.xml
+++ b/app/src/main/res/layout/fragment_for_her.xml
@@ -14,5 +14,6 @@
         android:id="@+id/women_recycleView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layoutAnimation="@anim/layout_animation"
         android:layout_centerInParent="true" />
 </RelativeLayout>
