--- a/app/src/main/res/layout/fragment_for_him.xml
+++ b/app/src/main/res/layout/fragment_for_him.xml
@@ -16,5 +16,6 @@
         android:id="@+id/men_recycleView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layoutAnimation="@anim/layout_animation"
         android:layout_centerInParent="true" />
 </RelativeLayout>
