--- a/app/src/main/res/layout/fragment_for_little_ones.xml
+++ b/app/src/main/res/layout/fragment_for_little_ones.xml
@@ -15,5 +15,6 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/forLittleOnes_recycleView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layoutAnimation="@anim/layout_animation" />
 </FrameLayout>
