--- a/app/src/main/res/layout/recycler_row.xml
+++ b/app/src/main/res/layout/recycler_row.xml
@@ -89,71 +89,44 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:padding="10dp"
     android:clipChildren="false"
     android:clipToPadding="false"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <com.ramotion.foldingcell.FoldingCell
-        android:id="@+id/folding_cell"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-        <FrameLayout
-            android:id="@+id/cell_content_view"
+        <ImageView
+            android:id="@+id/recycle_imageView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@android:color/darker_gray"
-            android:visibility="gone">
+            android:layout_height="wrap_content"
+            tools:srcCompat="@tools:sample/avatars"></ImageView>
 
-            <TextView
-                android:id="@+id/description"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="Content View"
-                android:textSize="14sp" />
-        </FrameLayout>
-        ​
-
-        <FrameLayout
-            android:id="@+id/cell_title_view"
+        <TextView
+            android:id="@+id/recycle_textView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:background="@android:color/white"
+            android:fontFamily="@font/acme"
+            android:text="TextView"
+            android:textAlignment="center"
+            android:textSize="24sp" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="402dp"
+            android:layout_height="66dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="207dp"
+            android:text="_____________________________________"
+            android:textAlignment="center"
+            android:textColor="#1F02090E" />
 
-                <ImageView
-                    android:id="@+id/recycle_imageView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    tools:srcCompat="@tools:sample/avatars"></ImageView>
+    </LinearLayout>
 
-                <TextView
-                    android:id="@+id/recycle_textView"
-                    android:layout_width="match_parent"
-                    android:layout_height="100dp"
-                    android:background="@android:color/white"
-                    android:fontFamily="@font/acme"
-                    android:text="TextView"
-                    android:textAlignment="center"
-                    android:textSize="24sp" />
-
-                <TextView
-                    android:id="@+id/textView5"
-                    android:layout_width="402dp"
-                    android:layout_height="66dp"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginEnd="5dp"
-                    android:layout_marginBottom="207dp"
-                    android:text="_____________________________________"
-                    android:textAlignment="center"
-                    android:textColor="#1F02090E" />
-
-            </LinearLayout>
-        </FrameLayout>
-    </com.ramotion.foldingcell.FoldingCell>
 </LinearLayout>
