Items Add Successfully to the cart in the Custom Cart Layout

--- a/app/src/main/res/layout/cart_recycle_row.xml
+++ b/app/src/main/res/layout/cart_recycle_row.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:paddingStart="10dp">
 
     <ImageButton
         android:id="@+id/delete_btn"
@@ -12,6 +13,7 @@
         android:layout_marginStart="223dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="47dp"
+        android:paddingTop="10dp"
         app:layout_constraintBottom_toTopOf="@+id/cart_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/cart_image_view"
@@ -20,8 +22,12 @@
 
     <ImageView
         android:id="@+id/cart_image_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_marginStart="20dp"
+        android:paddingStart="10dp"
+        android:scaleType="fitCenter"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/cart_price"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -34,6 +40,7 @@
         android:layout_marginTop="66dp"
         android:layout_marginEnd="213dp"
         android:layout_marginBottom="1dp"
+        android:paddingStart="10dp"
         android:text="TextView"
         app:layout_constraintBottom_toTopOf="@+id/cart_name"
         app:layout_constraintEnd_toEndOf="parent"
@@ -46,6 +53,7 @@
         android:layout_height="35dp"
         android:layout_marginTop="1dp"
         android:layout_marginEnd="19dp"
+        android:paddingStart="10dp"
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/cart_image_view"
