--- a/app/src/main/res/layout/cart_recycle_row.xml
+++ b/app/src/main/res/layout/cart_recycle_row.xml
@@ -1,61 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingStart="10dp">
-
-    <ImageButton
-        android:id="@+id/delete_btn"
-        android:layout_width="44dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="223dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="47dp"
-        android:paddingTop="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/cart_name"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/cart_image_view"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/ic_menu_delete" />
+    android:paddingStart="10dp"
+    android:paddingTop="20dp">
 
     <ImageView
-        android:id="@+id/cart_image_view"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_marginStart="20dp"
-        android:paddingStart="10dp"
-        android:scaleType="fitCenter"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/cart_price"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
+        android:id="@+id/imageView8"
+        android:layout_width="match_parent"
+        android:layout_height="147dp"
+        android:scaleType="centerInside"
+        app:srcCompat="@drawable/background_secondary" />
 
-    <TextView
-        android:id="@+id/cart_price"
-        android:layout_width="70dp"
-        android:layout_height="25dp"
-        android:layout_marginTop="66dp"
-        android:layout_marginEnd="213dp"
-        android:layout_marginBottom="1dp"
-        android:paddingStart="10dp"
-        android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/cart_name"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/cart_image_view"
-        app:layout_constraintTop_toTopOf="parent" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/cart_name"
-        android:layout_width="264dp"
-        android:layout_height="35dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginEnd="19dp"
-        android:paddingStart="10dp"
-        android:text="TextView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/cart_image_view"
-        app:layout_constraintTop_toBottomOf="@+id/cart_price" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/cart_price"
+            android:layout_width="70dp"
+            android:layout_height="25dp"
+            android:layout_marginTop="66dp"
+            android:layout_marginEnd="213dp"
+            android:layout_marginBottom="1dp"
+            android:paddingStart="10dp"
+            android:text="TextView"
+            app:layout_constraintBottom_toTopOf="@+id/cart_name"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/cart_image_view"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/cart_name"
+            android:layout_width="264dp"
+            android:layout_height="35dp"
+            android:layout_marginTop="1dp"
+            android:layout_marginEnd="19dp"
+            android:paddingStart="10dp"
+            android:text="TextView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/cart_image_view"
+            app:layout_constraintTop_toBottomOf="@+id/cart_price" />
+
+        <ImageButton
+            android:id="@+id/delete_btn"
+            android:layout_width="44dp"
+            android:layout_height="45dp"
+            android:layout_marginStart="223dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="47dp"
+            android:paddingTop="10dp"
+            app:layout_constraintBottom_toTopOf="@+id/cart_name"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/cart_image_view"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@android:drawable/ic_menu_delete" />
+
+        <ImageView
+            android:id="@+id/cart_image_view"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_marginStart="20dp"
+            android:paddingStart="10dp"
+            android:scaleType="fitCenter"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/cart_price"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.077"
+            tools:srcCompat="@tools:sample/avatars" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</FrameLayout>
