--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -32,7 +32,7 @@
     </fragment>
     <fragment
         android:id="@+id/nav_cart"
-        android:name="com.example.glistenglowgifts.fragments.CartFragment"
+        android:name="com.example.glistenglowgifts.cartRecycleView.CartFragment"
         android:label="fragment_cart"
         tools:layout="@layout/fragment_cart" />
     <fragment
